# rusty-time-logger

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
src/: app.css  index.html  main.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capabilities.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  csv.rs  main.rs  tauri_commands.rs  utils.rs
src-tauri/src/assets/: html-export.html
src-tauri/src/services/: action_service.rs  mod.rs  project_service.rs  task_service.rs
src-tauri/src/utils/: csv.rs  csv_utils.rs  export.rs  fn_utils.rs  mod.rs  project.rs  time.rs
src/css/: app.css  styles.css
src/js/: dom-elements.js  event-functions.js  main.js  rust-bindings.js  rust-listeners.js  utils.js
