[package]
name = "rusty-time-logger"
version = "1.0.0"
description = "A basic project time tracker written in Rust."
authors = ["Niel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [] }
tauri-cli = "2.0.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
chrono = "0.4.38"
rand = "0.8.5"
once_cell = "1.20.2"
dirs = "5.0.1"
tauri-plugin-dialog = "2"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
